--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Agda specific
 *.agdai
 MAlonzo/**
+project/MAlonzo/**
 _build/
 
 # latex specific - za teoretične zapiske
@@ -17,5 +18,5 @@ _build/
 *.out
 *.xmpi
 *.fls
-
+*.gz
 *.pdf
